Changed the textdomain and etc. from novo to initlanesis

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 
- Theme Name: initlanesis ( Novo fork )
+ Theme Name: initlanesis ( initlanesis fork )
  Theme URL: https://github.com/initLab/initlanesis
  Description: initlanesis is a 2-column Widget-ready child theme created for the Genesis Framework.
  Author: initLab
