--- a/css/custom.css
+++ b/css/custom.css
@@ -199,4 +199,11 @@
     -o-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
   }
+  
+  
+  /* event calendar beautify */
+ 
+  table.fullcalendar td {
+    width: 14.3% !important;
+  }
  
