--- a/css/component.css
+++ b/css/component.css
@@ -1427,15 +1427,15 @@ perspective effects (not including the modals and the overlay).
 /*
  * NUKE THE ANIMATION
  *
-	-webkit-animation:zp_appear 1s 1 cubic-bezier(0.175, 0.885, 0.320, 1.275);
-	-moz-animation:zp_appear 1s 1 cubic-bezier(0.175, 0.885, 0.320, 1.275);
-	-o-animation:zp_appear 1s 1 cubic-bezier(0.175, 0.885, 0.320, 1.275);
-	animation:zp_appear 1s 1 cubic-bezier(0.175, 0.885, 0.320, 1.275);
-	opacity:1;
-	-moz-transform:scale(1);
-	-webkit-transform:scale(1);
-	-o-transform:scale(1);
-	transform:scale(1);
+ *	-webkit-animation:zp_appear 1s 1 cubic-bezier(0.175, 0.885, 0.320, 1.275);
+ *	-moz-animation:zp_appear 1s 1 cubic-bezier(0.175, 0.885, 0.320, 1.275);
+ *	-o-animation:zp_appear 1s 1 cubic-bezier(0.175, 0.885, 0.320, 1.275);
+ *	animation:zp_appear 1s 1 cubic-bezier(0.175, 0.885, 0.320, 1.275);
+ *	opacity:1;
+ *	-moz-transform:scale(1);
+ *	-webkit-transform:scale(1);
+ *	-o-transform:scale(1);
+ *	transform:scale(1);
  */
 }
 .portfolio_shortcode,
@@ -1445,13 +1445,13 @@ perspective effects (not including the modals and the overlay).
 }
 .zp_start_animation.portfolio_shortcode,
 .zp_start_animation.zp-grid-wrapper{
-	/* NUKE THE ANIMATION
-	-webkit-animation:zp_fadeUp 1s 1 ;
-	-moz-animation:zp_fadeUp 1s 1;
-	-o-animation:zp_fadeUp 1s 1;
-	animation:zp_fadeUp 1s 1;
-	opacity: 1;
-	*/
+/* NUKE THE ANIMATION
+ *	-webkit-animation:zp_fadeUp 1s 1 ;
+ *	-moz-animation:zp_fadeUp 1s 1;
+ *	-o-animation:zp_fadeUp 1s 1;
+ *	animation:zp_fadeUp 1s 1;
+ *	opacity: 1;
+ */
 }
 
 .zp_show{
